--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 - pip install pep8 setuptools
 - python setup.py install
 script:
-# Stye Check 
+# Style Check 
 - python ./tests/pep8-git-pr-checker
 # Automated Testing
 - python -m unittest discover tests -v
