--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 # command to install dependencies
 install: 
 - pip install pep8 setuptools
-- python setup.py install
+- pip install -r requirements.txt
 script:
 # Style Check 
 - python ./tests/pep8-git-pr-checker
