--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-PyJWT==1.7.1
+PyJWT>=2.0.0
 requests>=2.19.1
 pyotp>=2.2.5
-pyOpenSSL==18.0.0
+pyOpenSSL>=18.0.0
 Twisted>=18.7.0
 service-identity
 semver
