--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -18,10 +18,15 @@ runs:
       with:
         python-version: "3.10"
 
+    - name: Install Poetry
+      shell: bash
+      run: |
+        pipx install poetry
+
     - name: Install dependencies
       shell: bash
       run: |
-        pip install -r requirements.txt
+        poetry install
 
     - name: Run custom node tests
       shell: bash
@@ -30,4 +35,4 @@ runs:
         export TEST_ENV_USER_ID=${{ fromJSON(inputs.secrets).TEST_ENV_USER_ID }}
         export TEST_ENV_PASSWORD=${{ fromJSON(inputs.secrets).TEST_ENV_PASSWORD }}
 
-        python3 -m unittest discover tests -v
+        poetry run python -m unittest discover tests -v
