--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,15 @@
 - commits:
+    - subject: Fixes linting and formatting
+      hash: 29274481f9adff283d04196421ccb9868619d101
+      body: ""
+      footer:
+        Change-type: patch
+        change-type: patch
+      author: Otávio Jacobi
+  version: 12.6.8
+  title: ""
+  date: 2023-04-11T13:13:26.264Z
+- commits:
     - subject: Reuse created apps to make the application tests faster
       hash: f67e19b0d756e56c93d068258813ffa694b1dceb
       body: ""
