--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,3 +1,7 @@
+- commits: []
+  version: 12.6.10
+  title: ""
+  date: 2023-04-14T18:26:03.308Z
 - commits:
     - subject: Fixes CI versioning and publishing
       hash: b331effe545f57d54b33a9b99c969758bc952b73
