Fixes python package name
Change-type: patch

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "balena-sdk-python"
+name = "balena-sdk"
 version = "12.6.12"
 description = ""
 authors = ["Balena <info@balena.io>"]
