--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,15 @@
 - commits:
+    - subject: Fixes python package name
+      hash: ff68dd07d67c818500942dd6949f108bd6b9e00c
+      body: ""
+      footer:
+        Change-type: patch
+        change-type: patch
+      author: Otávio Jacobi
+  version: 12.6.13
+  title: ""
+  date: 2023-04-20T18:43:30.550Z
+- commits:
     - subject: Triggers deployment
       hash: 3c11d543cef5d2afb8e780aea6ca633d1172d6a6
       body: ""
