--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,15 @@
 - commits:
+    - subject: Changes tag set behaviour to use upsert
+      hash: c4ae3370e7baf52478d3479a2cac3684af7dc5bd
+      body: ""
+      footer:
+        Change-type: patch
+        change-type: patch
+      author: Otávio Jacobi
+  version: 12.6.14
+  title: ""
+  date: 2023-04-20T19:11:02.669Z
+- commits:
     - subject: Fixes python package name
       hash: ff68dd07d67c818500942dd6949f108bd6b9e00c
       body: ""
