--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,15 @@
 - commits:
+    - subject: Removes py2 imports and sorts imports
+      hash: 7ce586670b14f628af1ffe2de15f2a5f818786f8
+      body: ""
+      footer:
+        Change-type: patch
+        change-type: patch
+      author: Otávio Jacobi
+  version: 12.6.20
+  title: ""
+  date: 2023-04-26T18:54:55.914Z
+- commits:
     - subject: Removes hardcoded personal emails from docs and tests
       hash: a2ebc171b5b4005cabcc1260cf95f2ce4acafbda
       body: ""
