--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ pyotp = ">=2.2.5"
 pyOpenSSL = ">=18.0.0"
 Twisted = ">=18.7.0"
 service-identity = "*"
-semver = "*"
+semver = "^2.10.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "*", python = ">=3.6.2"}
