--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,15 @@
 - commits:
+    - subject: Updates device get docs
+      hash: 0a59029a6fc427566d194fa39fa33d3ec27d3629
+      body: ""
+      footer:
+        Change-type: patch
+        change-type: patch
+      author: Otávio Jacobi
+  version: 12.6.23
+  title: ""
+  date: 2023-04-28T13:26:43.874Z
+- commits:
     - subject: Fix semver error caused by a major release
       hash: 87f4bf95d15bd9b02825819556d4dfb2ad21ad7e
       body: ""
