--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,15 @@
 - commits:
+    - subject: Allow HUP between dev OS variants
+      hash: e8d8581c487840441e4ba8438ad9a0215857b29a
+      body: ""
+      footer:
+        Change-type: minor
+        change-type: minor
+      author: Otávio Jacobi
+  version: 12.7.0
+  title: ""
+  date: 2023-05-11T11:57:51.707Z
+- commits:
     - subject: Updates device get docs
       hash: 0a59029a6fc427566d194fa39fa33d3ec27d3629
       body: ""
